another path, some file upload, tests, editors validation, swagger...
